--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.company.Tmp'
+        attributes 'Main-Class': 'com.company.ServerApplication'
     }
 }
 
