Refactor build.gradle to use variables for module versions

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ jar {
 }
 
 configurations {
+    configureEach {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -24,27 +27,27 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
-
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
-    implementation 'org.springframework.boot:spring-boot-starter:3.2.3'
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.3'
-
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.2.3'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+ext {
+    springVersion = 'latest.release'
+    lombokVersion = '1.18.30'
+    junitVersion = '5.8.1'
 }
 
-configurations {
-    configureEach {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    }
+dependencies {
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:$lombokVersion'
+    annotationProcessor 'org.projectlombok:lombok:$lombokVersion'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
+    implementation 'org.springframework.boot:spring-boot-starter:$springVersion'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:$springVersion'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web:$springVersion'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2:$springVersion'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:$junitVersion'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:$junitVersion'
 }
 
 test {
