--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,7 +10,7 @@ plugins {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.company.Client'
+        attributes 'Main-Class': 'com.company.server.Client'
     }
 }
 
