--- a/server/build.gradle
+++ b/server/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:latest.release'
+    runtimeOnly 'com.h2database:h2:latest.release'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
