--- a/server/build.gradle
+++ b/server/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:latest.release'
     runtimeOnly 'com.h2database:h2:latest.release'
+    implementation 'org.xerial:sqlite-jdbc:3.46.1.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
